[gd_scene load_steps=14 format=2]

[ext_resource path="res://players/weapons/Rifle/Rifle.gd" type="Script" id=1]
[ext_resource path="res://players/weapons/Rifle/LoadedRoundshotState.gd" type="Script" id=2]
[ext_resource path="res://players/weapons/Rifle/LoadedCanistershotState.gd" type="Script" id=3]
[ext_resource path="res://players/weapons/Rifle/RifleFSM.gd" type="Script" id=4]
[ext_resource path="res://players/weapons/Rifle/RifleFire2.wav" type="AudioStream" id=5]
[ext_resource path="res://players/weapons/Rifle/RifleReload.wav" type="AudioStream" id=6]
[ext_resource path="res://players/weapons/Rifle/LoadingRoundShotState.gd" type="Script" id=7]
[ext_resource path="res://players/weapons/Rifle/LoadingCanisterShotState.gd" type="Script" id=8]
[ext_resource path="res://players/weapons/Rifle/EmptyState.gd" type="Script" id=9]
[ext_resource path="res://players/Player/sprites/flash.png" type="Texture" id=10]
[ext_resource path="res://players/weapons/Rifle/RSReloadingInterruptedState.gd" type="Script" id=11]
[ext_resource path="res://players/weapons/Rifle/CSReloadingInterruptedState.gd" type="Script" id=12]
[ext_resource path="res://players/Player/Sounds/click_gun.ogg" type="AudioStream" id=13]

[node name="Rifle" type="Node2D"]
script = ExtResource( 1 )

[node name="RifleFSM" type="Node" parent="."]
script = ExtResource( 4 )

[node name="LoadedRoundShotState" type="Node" parent="RifleFSM"]
script = ExtResource( 2 )

[node name="LoadedCanisterShotState" type="Node" parent="RifleFSM"]
script = ExtResource( 3 )

[node name="LoadingRoundShotState" type="Node" parent="RifleFSM"]
script = ExtResource( 7 )

[node name="LoadingCanisterShotState" type="Node" parent="RifleFSM"]
script = ExtResource( 8 )

[node name="EmptyState" type="Node" parent="RifleFSM"]
script = ExtResource( 9 )

[node name="RSReloadingInterruptedState" type="Node" parent="RifleFSM"]
script = ExtResource( 11 )

[node name="CSReloadingInterruptedState" type="Node" parent="RifleFSM"]
script = ExtResource( 12 )

[node name="FireAudioStreamPlayer2D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
attenuation_model = 3
unit_db = 42.604
pitch_scale = 0.98

[node name="ReloadAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="RifleClickAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
pitch_scale = 0.61

[node name="RifleEmptyClickAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.059
pitch_scale = 1.27

[node name="MuzzleFlashLight2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 10 )

[node name="MuzzleFlashTimer" type="Timer" parent="."]
